css/panel-manager-style.css
/*.panel-manager {
    display: none;
    bottom: 30px;
    right: 0px;
    top: 30px;
    height: auto;
    width: 200px;
    overflow-y: scroll;
    position: fixed;
}*/
.panel-manager {
    display: none;
}
#slidebar {
    position: fixed;
    top: 70px;
    right: 249px;
    /*transform: rotate(-90deg);*/
}
#slidebar button {
    border-radius: 4px 0 0 4px;
    border-right: none;
    height: 123px;
    width: 30px;
    /*border-right: none;*/
}
#slider {
    border: solid 1px #ccc;
    border-radius: 0px;
    border-bottom-left-radius: 4px;
    /*border-right-color: white;*/
    height: auto;
    width: 250px;
    /*margin-left: -1px;*/
    overflow-y: scroll;
    position: fixed;
    top: 70px;
    right: 0px;
    bottom: 30px;
    z-index: -1;
}
#tab-slidebar {
    padding-left: 0px;
}
.sideways {
    padding-top: 0px;
}
#tab-content-slidebar {
    margin-top: 10px;
}

